# OASYS2

./: .gitignore  MANIFEST.in  README.md  TODO.txt  pyproject.toml  setup.cfg  setup.py
distribution/macos/: build-macos-app.sh  create-dmg-installer.sh  oasys2.icns
distribution/macos/dmg-resources/: VolumeIcon.icns
distribution/macos/skeleton.app/Contents/: Info.plist.in
distribution/macos/skeleton.app/Contents/Resources/: oasys2.icns
distribution/windows/: LICENSE  build-win-installer.sh  build-win-portable.sh  oasys-install.nsi  oasysrc.conf
oasys2/__canvas/: __main__.py  main.py
oasys2/application/: addons.py  internal_libraries.py
oasys2/application/data/: INTERNAL_LIBRARIES.txt
oasys2/canvas/: __main__.py  conf.py  config.py  discovery.py  main.py  mainwindow.py  widgetsscheme.py
oasys2/canvas/ai/: __init__.py  claude_prompt.txt  fab.py  popup.py
oasys2/canvas/ai/data/: claude-haiku-4-5-20251001.json  claude-opus-4-5-20251101.json  claude-opus-4-6.json  claude-sonnet-4-5-20250929.json  claude-sonnet-4-6.json
oasys2/canvas/application/: addons.py  canvasmain.py  internal_libraries.py  mainwindow.py
oasys2/canvas/application/data/: INTERNAL_LIBRARIES.txt  OFFICIAL_ADDONS.txt
oasys2/canvas/util/: canvas_util.py  oasys_util.py
oasys2/widget/: gui.py  widget.py
oasys2/widget/util/: scanning.py  widget_objects.py  widget_util.py  widgets_util.py
oasys2/widget/widgets/loops/: ow_node_point.py  ow_pin.py
oasys2/widget/widgets/test/: __init__.py
oasys2/widget/workflow/: widgetsscheme.py
oasys2/widgets/abstract/scanning/: abstract_scan_file_node_point.py  abstract_scan_node_point.py  abstract_scan_variable_node_point.py
oasys2/widgets/loops/: __init__.py  ow_node_point.py  ow_pin.py  ow_test_receiver.py  ow_test_starter.py
oasys2/widgets/scanning/: __init__.py  ow_scan_file_node_point.py  ow_scan_variable_node_point.py
oasys2/widgets/test/: ow_test_receiver.py  ow_test_starter.py  owtest.py
oasys2/widgets/tools/: __init__.py  ow_hdf5_file_reader.py  ow_python_script.py
