[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oasys2"
version = "0.0.55"
description = "Core component of OASYS 2.0"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
requires-python = ">=3.11"
authors = [
    { name = "Manuel Sanchez del Rio" },
    { name = "Luca Rebuffi", email = "lrebuffi@anl.gov" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Console",
    "Environment :: Plugins",
    "Programming Language :: Python",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]
dependencies = [
    "numpy==2.2.6",
    "fabio==2024.9.0",
    "scipy==1.16.1",
    "importlib_resources",
    "importlib_metadata",
    "PyQt6==6.9.1",
    "srxraylib",
    "syned>=1.0.44",
    "xoppylib>=1.0.45",
    "crystalpy>=0.0.25",
    "wofry>=1.0.33",
    "wofryimpl>=1.0.33",
    "silx==3.0.1",
    "qtawesome==1.4.2",
    "PyOpenGL==3.1.10",
    "h5py==3.14.0",
    "orange-canvas-core<=0.2.8",
    "orange-widget-base<=4.27.0",
]

[project.urls]
Homepage = "https://www.aps.anl.gov/Science/Scientific-Software/OASYS"
Download = "https://github.com/oasys-kit/OASYS2"
Source = "https://github.com/oasys-kit/OASYS2"
"Bug Reports" = "https://github.com/oasys-kit/OASYS2/issues"
Documentation = "https://orange-canvas-core.readthedocs.io/en/latest/"

[project.entry-points."oasys2.widgets"]
"Oasys Tools" = "oasys2.widgets.tools"
"Oasys Loops" = "oasys2.widgets.loops"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["oasys2*"]
namespaces = false

[tool.setuptools.package-data]
"oasys2.canvas.application" = ["data/*.txt", "icons/*.svg"]
"oasys2.canvas.scheme" = ["data/*.json"]
"oasys2.canvas" = ["icons/*.png", "icons/*.svg"]
"oasys2.widgets.loops" = ["icons/*.png", "icons/*.svg"]
"oasys2.widgets.tools" = ["icons/*.png", "icons/*.svg"]

[tool.coverage.run]
source = ["oasys2"]
omit = ["*/tests/*.py"]

[tool.coverage.report]
exclude_lines = [
    "noqa",
    "pragma: no coverage",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
    "assert False",
]